content details changes

--- a/src/pages/transcribe/AudioPlayerCustom.css
+++ b/src/pages/transcribe/AudioPlayerCustom.css
@@ -1,8 +1,8 @@
-.rhap_progress-indicator {
+/* .rhap_progress-indicator {
     width: 18px;
     height: 18px;
   }
 
   .rhap_progress-bar-show-download {
     height: 8px;
-  }
+  } */
